# riv

./: .gitignore  Cargo.toml  README.md  THIRD-PARTY-NOTICES.md  build.rs  build.sh
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
buildtools/: build_deps.sh
buildtools/patches/: openexr-0001-mingw-win32-semaphore.patch
buildtools/shim/: exr_shim.cpp
res/: blue_noise_64.LICENSE.txt  resource.h  riv.manifest  riv.rc
src/: actions.rs  bindings.rs  main.rs  settings.rs  text.rs
src/archive/: libarchive.rs  mod.rs  reader.rs
src/dialogs/: about.rs  mod.rs  open_url.rs  options.rs  rename.rs  resource.rs  shortcut_capture.rs  text_input.rs
src/image/: animation.rs  color.rs  core.rs  decode.rs  fallback.rs  mod.rs
src/network/: curl.rs
src/shell/: clipboard.rs  drag_drop.rs  file_association.rs  file_ops.rs  mod.rs  open_dialog.rs  open_with.rs  start_menu.rs
src/view/: blue_noise.rs  dither.rs  mod.rs  quantize.rs  renderer.rs  sampling.rs  transform.rs
src/window/: context_menu.rs  dwm.rs  instances.rs  menu_theme.rs  mod.rs  overlay.rs
