[package]
name = "riv"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "rust image viewer for Windows"

[dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_LibraryLoader",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
] }
windows-numerics = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
