[package]
name = "riv"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "rust image viewer for Windows"

[dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_HiDpi",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_Controls",
  "Win32_UI_Controls_Dialogs",
  "Win32_System_Com",
  "Win32_System_Registry",
  "Win32_Security",
  "Win32_System_Ole",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_SystemServices",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_Variant",
  "Win32_System_Time",
  "Win32_Globalization",
  "Win32_System_LibraryLoader",
  "Win32_Devices_Display",
  "Win32_Storage_FileSystem",
  "Win32_Graphics_Imaging",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Direct2D",
  "Win32_Graphics_Direct2D_Common",
  "Win32_Graphics_DirectWrite",
] }
windows-core = "0.62.2"
windows-numerics = "0.3"
serde_json = "1"
png = "0.18.1"
resvg = "0.47.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
